# kata_duration_format

human_readable_duration_format/: README.md  pyproject.toml
human_readable_duration_format/tests/: test_main.py
