[tool.poetry]
name = "human-readable-duration-format"
version = "0.1.0"
description = ""
authors = ["Dtzz81 <denise.turkova@madetech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
